<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeBottom.Hydration.HydrationActivity">


        />

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/hydration_background">


        <include layout="@layout/topbar2"/>





<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="200dp"-->
<!--            android:adjustViewBounds="true"-->
<!--            android:scaleType="fitXY"-->
<!--            android:src="@drawable/hydration_background"/>-->

<!--        <ImageView-->
<!--            android:id="@+id/back"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="10dp"-->
<!--            android:src="@drawable/ic_back"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Hydration\n(Water)"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/keep_an_eye_"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_checked"
                android:padding="6dp"
                android:layout_margin="8dp"
                android:background="@drawable/background_circle_grey"/>

            <TextView
                android:layout_toRightOf="@id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_centerVertical="true"
                android:text="@string/log_how_much_"
                android:textSize="12sp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_checked"
                android:background="@drawable/background_circle_grey"
                android:padding="6dp"
                android:layout_margin="8dp"
                />

            <TextView
                android:layout_toRightOf="@id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_centerVertical="true"
                android:text="@string/set_a_personal_"
                android:textSize="12sp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_checked"
                android:padding="6dp"
                android:layout_margin="8dp"
                android:background="@drawable/background_circle_grey"/>

            <TextView
                android:layout_toRightOf="@id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_centerVertical="true"
                android:text="@string/see_your_weekly_"
                android:textSize="12sp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/OpenBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/poppins_regular"
        android:text="OPEN"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>