<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeBottom.Medications.MedicationsActivity.CreateReminderMedicationActivity">

    <include layout="@layout/topbar"
        android:id="@+id/top_create_reminder"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/top_create_reminder"
        android:layout_marginRight="@dimen/space20"
        android:layout_marginLeft="@dimen/space20">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medication_information"
        android:textSize="@dimen/text14"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/space20"
        android:layout_marginLeft="@dimen/space5"

        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space10"
        app:cardCornerRadius="@dimen/space5"
        android:elevation="@dimen/space10"
        android:padding="@dimen/space5"
        android:layout_marginLeft="@dimen/space8"
        android:layout_marginRight="@dimen/space8"
        >

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="@dimen/space50"
            android:id="@+id/medicationInformationSpinner"

            />

    </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_dosage"
            android:textSize="@dimen/text16"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="@dimen/space20"
            android:layout_marginLeft="@dimen/space5"

            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space10"
            app:cardCornerRadius="@dimen/space5"
            android:elevation="@dimen/space10"
            android:padding="@dimen/space5"
            android:layout_marginLeft="@dimen/space8"
            android:layout_marginRight="@dimen/space8"
            >

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space50"
                    android:id="@+id/selectDosageSpinner"


                    />


        </androidx.cardview.widget.CardView>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/colorless"
            android:text="@string/reminders"
            android:textSize="@dimen/text16"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="@dimen/space30"

            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space10"
            app:cardCornerRadius="@dimen/space5"
            android:elevation="@dimen/space10"
            android:padding="@dimen/space5"
            android:layout_marginLeft="@dimen/space8"
            android:layout_marginRight="@dimen/space8"

            >

                <TextView
                    android:id="@+id/timesAndDaysOfWeek_Tv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space50"
                    android:padding="@dimen/space10"
                    android:gravity="center_vertical"
                    android:background="@drawable/colorless"
                    android:text="@string/time_and_days_of_the_week"
                    android:textSize="@dimen/space14"
                    android:textColor="@color/orange"
                    android:fontFamily="@font/poppins_regular"

                    />
        </androidx.cardview.widget.CardView>

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:cardCornerRadius="@dimen/space5"-->
<!--            android:elevation="@dimen/space10"-->
<!--            android:layout_marginTop="@dimen/space30"-->
<!--            android:padding="@dimen/space5"-->
<!--            android:layout_marginLeft="@dimen/space8"-->
<!--            android:layout_marginRight="@dimen/space8"-->

<!--            >-->

<!--                <Spinner-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="@dimen/space50"-->
<!--                    android:text="@string/additional_option"-->
<!--                    android:textColor="@color/orange"-->
<!--                    android:id="@+id/additionalOptionSpinner"-->

<!--                    />-->


<!--        </androidx.cardview.widget.CardView>-->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space10"
            app:cardCornerRadius="@dimen/space5"
            android:elevation="@dimen/space10"
            android:padding="@dimen/space5"
            android:layout_marginLeft="@dimen/space8"
            android:layout_marginRight="@dimen/space8"

            >

            <TextView
                android:id="@+id/AdditionOption_Tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space50"
                android:padding="@dimen/space10"
                android:gravity="center_vertical"
                android:background="@drawable/colorless"
                android:text="Additional Options"
                android:textSize="@dimen/space14"
                android:textColor="@color/orange"
                android:fontFamily="@font/poppins_regular"

                />
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</RelativeLayout>

